@@ -1,3 +1,10 @@
+Fri May 26 13:16:48 UTC 2006  Nanbor Wang  <nanbor@exothermic.txcorp.com>
+
+        * ace/DLL_Manager.cpp:
+        
+          Fixed incorrect usage of ACE::debug check.  Thanks to Johnny for
+          reporting this.
+
 Fri May 26 15:04:55 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * ASNMP/tests/Counter_Test.cpp:
